	* Changed Device.AvailableTextureMemory to return an Int64 instead of Int32.
	* Fixed Device.Set*ShaderConstant* overloads that implicitly calculate the number of items to pass.
	* Vertex declarations no longer require VertexElementEnd at the end of the input array.
	* Added RegisterSoftwareDevice to support software renderers.
	
Direct3D 10
	* Dropped stream size checks in texture ToStream functions.
	* Added a constructor to InputLayout to take shader bytecode.
	* Added Texture2D.ComputeNormalMap.
	* Added ShaderResourceView.FromMemory and ShaderResourceView.FromStream.
	* Added Resource.LoadTextureFromTexture and Resource.FilterTexture.
	* Added Resource.AsSurface to retrieve a DXGI Surface from a resource.
	* Added missing WARP device type.
	* Fixed shader compilation to allow null entry points.
	* Fixed ShaderSignature Get*Signature methods.
	* Added overloads to EffectVectorVariable.Set to take color inputs.
	
Direct3D 11
	* Dropped stream size checks in texture ToStream functions.
	* Added a constructor to InputLayout to take shader bytecode.
	* Added Texture2D.ComputeNormalMap.
	* Added ShaderResourceView.FromFile, ShaderResourceView.FromMemory and ShaderResourceView.FromStream.
	* Added Resource.LoadTextureFromTexture and Resource.FilterTexture.
	* Added Resource.AsSurface to retrieve a DXGI Surface from a resource.
	* Fixed shader compilation to allow null entry points.
	* Added new overloads for CreateDeviceWithSwapChain that better prevent argument errors. Old overloads have been deprecated.
	* Fixed the Device.GetSupportedFeatureLevel functions.
	* Fixed ShaderSignature Get*Signature methods.
	* Added overloads to EffectVectorVariable.Set to take color inputs.
	* Added stream-output support to geometry shaders.
	* Documented a large portion of the D3D11 types.
	* Added missing TextureCube members to ShaderResourceViewDescription.
	* Cleaned up the DirectCompute interfaces.
	* Added creation methods for the FastFourierTransform type.