@@ -223,6 +223,7 @@ Global
 		{43347176-9ED3-4F80-9C12-357014B19F6A}.Release|x86.ActiveCfg = Release|x86
 		{43347176-9ED3-4F80-9C12-357014B19F6A}.Release|x86.Build.0 = Release|x86
 		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Debug|x64.ActiveCfg = Debug|x64
+		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Debug|x64.Build.0 = Debug|x64
 		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Debug|x86.ActiveCfg = Debug|Win32
 		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Debug|x86.Build.0 = Debug|Win32
 		{DF460EAB-570D-4B50-9089-2E2FC801BF38}.Public|x64.ActiveCfg = Release|x64
